[tool.poetry]
name = "repl_nix_bottggame-master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
bs4 = "^0.0.1"
Flask = "^2.3.2"
python-dateutil = "^2.8.2"
APScheduler = "^3.10.1"
openai = "^0.27.8"
pymongo = "^4.4.1"
Pillow = "^10.0.0"
pytz = "^2023.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
